# homco2

./: .gitignore  CMakeLists.txt  CMakeSettings.json  todo.txt
apps/: CMakeLists.txt
apps/common/: ChannelId.h  ChannelState.cpp  ChannelState.h  DataPacket.cpp  DataPacket.h  HelloPacket.cpp  HelloPacket.h  IPacket.h  Interval.cpp  Interval.h  MasterStateChangePacket.cpp  MasterStateChangePacket.h  PacketFactory.cpp  PacketFactory.h  PacketHeader.h  PacketType.h  TCPConnection.cpp  TCPConnection.h  Timestamp.cpp  Timestamp.h  WeekdayInterval.cpp  WeekdayInterval.h
apps/homco2app/: CMakeLists.txt
apps/homco2app/src/: ChannelDataObject.cpp  ChannelDataObject.h  HomcoApplication.cpp  HomcoApplication.h  QmlAdapter.cpp  QmlAdapter.h  RestClient.cpp  RestClient.h  loader.qml  main.cpp  main.qml  resources.qrc
apps/homco2app/src/network/: NetworkManager.cpp  NetworkManager.h
apps/homco2server/: CMakeLists.txt
apps/homco2server/src/: Channel.cpp  Channel.h  ChannelId.h  Gpio.cpp  Gpio.h  RestHandler.cpp  RestHandler.h  Server.cpp  Server.h  TCPServer.cpp  TCPServer.h  main.cpp
contrib/: CMakeLists.txt  contrib.cmake
contrib/asio-1.12.1/: CMakeLists.txt  asio.cmake
contrib/cpprestsdk-2.10/: cpprest.cmake
contrib/qt-5.12.6/: qt.cmake
